# trademind-backend

./: .env.example  .gitignore  Dockerfile  Procfile  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
trademind/: __init__.py  main.py  seed_data.py
trademind/api/: schemas.py
trademind/api/routers/: analytics.py  backtest.py  correlation.py  heatmap.py  learning.py  market.py  notifications.py  patterns.py  portfolio.py  recommendations.py  scores.py  sector_analysis.py  sentiment.py  trades.py
trademind/config/: constants.py  settings.py
trademind/core/: exceptions.py  logger.py  nse_status.py
trademind/database/: __init__.py  connection.py  models.py
trademind/engines/: nse_client.py
trademind/engines/adaptive_weights/: __init__.py  optimizer.py
trademind/engines/ai_scoring/: scorer.py
trademind/engines/analytics/: __init__.py  engine.py
trademind/engines/auto_trader/: engine.py
trademind/engines/backtesting/: __init__.py  data_store.py  metrics.py  trade_simulator.py  walk_forward.py
trademind/engines/bhavcopy/: __init__.py  engine.py  yahoo.py  yahoo_history.py
trademind/engines/correlation/: engine.py
trademind/engines/feature_engine/: extractor.py
trademind/engines/learning/: __init__.py  engine.py
trademind/engines/market_data/: collector.py
trademind/engines/multi_timeframe/: __init__.py  aggregator.py  fusion.py
trademind/engines/notifications/: service.py
trademind/engines/paper_trading/: executor.py
trademind/engines/pattern_discovery/: __init__.py  engine.py
trademind/scheduler/: cache.py  manager.py  tasks.py
(+7 files in other folders)
