[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trademind"
version = "1.0.0"
description = "TradeMind AI — Self-Improving NSE Stock Trading Intelligence Platform"
license = { text = "Proprietary" }
requires-python = ">=3.11"
authors = [{ name = "TradeMind AI Team" }]

dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "loguru>=0.7.0,<1.0.0",
    "aiofiles>=23.2.0,<24.0.0",
    "alembic>=1.13.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
trademind = "trademind.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["trademind"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["trademind"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
